# dotfiles

./: .activate.sh  .actrc  .alias  .bash_aliases  .bash_profile  .bashrc  .bashrc.atwork  .bashrc_test.sh  .csh.completions  .cshrc  .deactivate.sh  .editorconfig  .env  .envrc  .gitconfig  .gitconfig-template  .gitignore  .gitignore_global  .gitmodules  .gvimrc  .hgignore_global  .hgrc  .hgsub  .hgsubstate  .infokey  .inputrc  .neoconf.json  .npmrc  .nvim  .popt  .pre-commit-config.yaml  .prettierrc.json5  .profile  .profile_test.sh  .pythonrc.py  .sh_advanced_rc  .sh_aliases  .sh_basics  .sh_env  .sh_rc  (+41 more)
.aws/: .gitignore
.azure/: .gitignore
.bash/: bash-precmd.sh  bash-preexec.sh
.bash_completion/: .gitignore  helm.sh
.bash_completion.d/: git.sh
.claude/: .gitignore  CLAUDE.Task.extract-sessions-kb-to-own-repo.md  CLAUDE.Task.extract-sessions-kb-to-private-repo.md  CLAUDE.Task.restructure-must-read-dirs.md  CLAUDE.integrate-sessions-kb-into-llm-subtask.Task.md  CLAUDE.md  CLAUDE.move-skill-triggers-to-must-read-kb.Task.md  llm-hash.md  local  sessions.jsonschema.yaml  settings.json  todo.jsonschema.yaml  todo.md
.config/: .gitignore  .luarc.json  mimeapps.list  pylintrc  shellcheckrc
.gaim/: accels  accounts.xml  blist.xml  pounces.xml  prefs.xml  status.xml
.gitconfig.d/: vimdiff.conf
.irssi/: .gitignore  config
.jq/: .gitignore  builtin.jq  bukzor.jq
.jupyter/: jupyter_lab_config.py  jupyter_notebook_config.py
.mplayer/: config
.sh_lib/: bash-chpwd.sh  bash-precmd.sh  functions-cli.sh  minimal.sh  modernizr.sh
.sh_plugins.d/: .gitignore  (+6 more)
(+2167 files in other folders)
